--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,9 @@ jobs:
       - image: docker.io/mataly/toolbox-rs-pipeline-python:latest
     steps:
       - checkout
-      - run: python3 /rackspace/authenticate.py
+      - run: 
+          command: python3 /rackspace/check_authentication.py
+          name: Check Authentication  
       - run: python3 /rackspace/plan.py
 
 workflows:
