--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,7 @@ jobs:
           paths:
             - .terraform.*.tar.gz
             - terraform.*.plan
+            - layers
 
   apply:
     docker:
