--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,10 @@
 version: 2
 jobs:
   plan:
+    parameters:
+      continue_apply:
+        type: env_var_name
+        default: False
     docker:
       - image: docker.io/mataly/toolbox-rs-pipeline-python:latest
     steps:
@@ -9,8 +13,10 @@ jobs:
           command: python3 /rackspace/check_authentication.py
           name: Check Authentication  
       - run: 
-          command: python3 /rackspace/plan.py 
+          command: python3 /rackspace/plan.py >> ${<< parameters.continue_apply >>}
           name: Terraform Plan
+      - run: 
+          command: echo ${<< parameters.continue_apply >>}
       - store_artifacts:
           path: /tmp/artifacts
       - persist_to_workspace:
