--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   plan:
     parameters:
       continue_apply:
-        type: env_var_name
+        type: string
         default: False
     docker:
       - image: docker.io/mataly/toolbox-rs-pipeline-python:latest
@@ -12,11 +12,11 @@ jobs:
       - run: 
           command: python3 /rackspace/check_authentication.py
           name: Check Authentication  
+      #- run: 
+      #    command: python3 /rackspace/plan.py >> ${<< parameters.continue_apply >>}
+      #    name: Terraform Plan
       - run: 
-          command: echo True >> ${<< parameters.continue_apply >>}
-          name: Terraform Plan
-      - run: 
-          command: echo ${<< parameters.continue_apply >>}
+          command: echo << parameters.continue_apply >>
       - store_artifacts:
           path: /tmp/artifacts
       - persist_to_workspace:
