--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
       type: string
       default: "False"
     environment:
-      TMP_PARAM1: << parameters.continue_apply >>
+      TMP_PARAM1: ${parameters.continue_apply}
     docker:
       - image: docker.io/mataly/toolbox-rs-pipeline-python:latest
     steps:
