--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,9 +4,7 @@ jobs:
     parameters:
       continue_apply:
         type: string
-        default: "False"
-      environment:
-        TMP_PARAM1: ${parameters.continue_apply}
+        default: f
     docker:
       - image: docker.io/mataly/toolbox-rs-pipeline-python:latest
     steps:
@@ -18,7 +16,7 @@ jobs:
       #    command: python3 /rackspace/plan.py >> ${<< parameters.continue_apply >>}
       #    name: Terraform Plan
       - run: 
-          command: echo $TMP_PARAM1
+          command: echo << parameters.continue_apply >>
       - store_artifacts:
           path: /tmp/artifacts
       - persist_to_workspace:
