--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,8 +3,8 @@ jobs:
   plan:
     parameters:
       continue_apply:
-        type: string
-        default: f
+        type: bool
+        default: False
     docker:
       - image: docker.io/mataly/toolbox-rs-pipeline-python:latest
     steps:
@@ -13,7 +13,8 @@ jobs:
           command: python3 /rackspace/check_authentication.py
           name: Check Authentication  
       - run: 
-          command: echo << parameters.continue_apply >>
+          command: python3 /rackspace/plan.py >> ${<< parameters.continue_apply >>}
+          name: Terraform Plan
       - store_artifacts:
           path: /tmp/artifacts
       - persist_to_workspace:
