--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,8 @@ jobs:
       - run: 
           command: python3 /rackspace/plan.py >> << parameters.continue_apply >>
           name: Terraform Plan
+      - run: 
+          command: echo << parameters.continue_apply >>
       - store_artifacts:
           path: /tmp/artifacts
       - persist_to_workspace:
