--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,8 @@ jobs:
     docker:
       - image: docker.io/mataly/toolbox-rs-pipeline-python:latest
     steps:
+      - run:
+          command: echo ./continue_apply
       - run: 
           command: python3 /rackspace/check_authentication.py
           name: Check Authentication
@@ -35,8 +37,6 @@ jobs:
       - run: 
           command: python3 /rackspace/apply.py
           name: Terraform Apply
-      - run:
-          command: echo continue_apply
       
 workflows:
   build_and_test:
