--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,9 +7,10 @@ jobs:
       - checkout
       - run: 
           command: python3 /rackspace/check_authentication.py
-          name: Check Authentication  
+          name: Check Authentication
+      - run: mkdir -p workspace  
       - run: 
-          command: python3 /rackspace/plan.py >> /workspace/continue_apply
+          command: python3 /rackspace/plan.py >> workspace/continue_apply
           name: Terraform Plan
       - store_artifacts:
           path: /tmp/artifacts
