--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
       - image: docker.io/mataly/toolbox-rs-pipeline-python:latest
     steps:
       - run:
-          command: echo ./continue_apply
+          command: cat continue_apply
       - run: 
           command: python3 /rackspace/check_authentication.py
           name: Check Authentication
