--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,8 @@ jobs:
     docker:
       - image: docker.io/mataly/toolbox-rs-pipeline-python:latest
     steps:
+      - run:
+          command: cat root/project/workspace/continue_apply
       - run: 
           command: python3 /rackspace/check_authentication.py
           name: Check Authentication
