--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
       - image: docker.io/mataly/toolbox-rs-pipeline-python:latest
     steps:
       - run:
-          command: ls /root/project
+          command: pwd
       - run: 
           command: python3 /rackspace/check_authentication.py
           name: Check Authentication
